# TypeLink

./: .clang-format  .gitignore  CMakeLists.txt  License  README.md  typelink.bat  typelink.sh
Assets/Arch/: TypeLink.puml
TypeLink/Client/: main.cpp
TypeLink/Server/: main.cpp
